# openai_categorizer_nlp

./: .gitignore  pyproject.toml  readme.md  requirements.txt
src/openai_categorizer_nlp/: __init__.py  core.py
tests/: test_core.py
